--- a/bcas.html
+++ b/bcas.html
@@ -8,6 +8,7 @@
     <title>bcas</title>
 </head>
 <style>
+    /* inline css */
     body {
         font-family: Arial, Helvetica, sans-serif;
         background-color: rgb(253, 252, 250);
